# csc-226-group-3-certificate-generator

./: .gitignore  CMakeLists.txt  CONTRIBUTIONS.md  README.md  explanation.txt  generate.py  index.html  main.cpp  presentation.html  presentation.pptx  students.csv
include/: certificate.hpp  exceptions.hpp  generator.hpp  http_server.hpp  person.hpp
src/: certificate.cpp  generator.cpp  http_server.cpp  person.cpp
